Bug 485080 - Pasting a fediverse link into the search box on the left side panel doesn't load the post
Summary: Pasting a fediverse link into the search box on the left side panel doesn't l...
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.02.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-05 13:52 UTC by Bart Ribbers
Modified: 2024-04-07 01:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bart Ribbers 2024-04-05 13:52:20 UTC
SUMMARY
I'd like to be able to copy any fediverse URL to a post and paste it in the search field in Tokodon to make it load that post through my instance. This is something the default Mastodon web interface supports and from what I hear also something Tokodon is supposed to support but it seems to be broken at the moment.

STEPS TO REPRODUCE
1. Copy the URL to any fediverse post, for example https://ma.fellr.net/@fell/112217662940193667
2. Paste it in the search field in Tokodon
3. Press enter to make it "search"

OBSERVED RESULT
It reports "No search results"

EXPECTED RESULT
The post to be loaded into the main view after my server has retrieved it

SOFTWARE/OS VERSIONS
Linux: Alpine Linux edge
KDE Plasma Version: 6.0.3
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.3
Comment 1 Joshua Goins 2024-04-07 01:52:24 UTC
Git commit 7aebae98346a951dc7b4fed934e36d9c6e54403a by Joshua Goins.
Committed on 07/04/2024 at 01:52.
Pushed by redstrate into branch 'master'.

Resolve remote posts in the search box

This allows you post links to posts (or users) in other instances and
have them show up in the search.

M  +3    -1    src/search/searchmodel.cpp

https://invent.kde.org/network/tokodon/-/commit/7aebae98346a951dc7b4fed934e36d9c6e54403a
Comment 2 Joshua Goins 2024-04-07 01:52:54 UTC
Git commit 473db936c537488d35510129a922e79fa2dd17e0 by Joshua Goins.
Committed on 07/04/2024 at 01:52.
Pushed by redstrate into branch 'release/24.02'.

Resolve remote posts in the search box

This allows you post links to posts (or users) in other instances and
have them show up in the search.
(cherry picked from commit 7aebae98346a951dc7b4fed934e36d9c6e54403a)

M  +3    -1    src/search/searchmodel.cpp

https://invent.kde.org/network/tokodon/-/commit/473db936c537488d35510129a922e79fa2dd17e0