Resolve remote posts in the search box

This allows you post links to posts (or users) in other instances and
have them show up in the search.

BUG: 485080
(cherry picked from commit 7aebae98346a951dc7b4fed934e36d9c6e54403a)